--- a/styles/base.css
+++ b/styles/base.css
@@ -26,8 +26,8 @@ header img {
     box-shadow: -5px 5px 5px rgba(28, 209, 197, 0.5);
 }
 h1 {
-    padding-left: 50px;
-    font-size: 3rem;
+    font-size: 2rem;
+    padding: 10px;
 }
 nav {
     background-color: #1C1C1C;
@@ -95,9 +95,9 @@ footer {
     padding: 10px;
     text-align: center; 
 }
-@media screen and (max-width: 900px) {
+/* @media screen and (max-width: 900px) {
     h1 {
       font-size: 2rem;
       padding: 10px;
     }
-}
+} */
