--- a/styles/base.css
+++ b/styles/base.css
@@ -30,13 +30,12 @@ h1 {
     padding: 10px;
 }
 nav {
+    display: none; 
     background-color: #1C1C1C;
     width: 90%;
     margin: auto;
     padding: 10px;
     text-align: center;
-    display: flex;
-    flex-direction: column;
 }
 nav a 
 {
@@ -75,6 +74,16 @@ h3 {
 .card a {
     text-decoration: none;
 }
+.map{
+    width: 90%;
+    margin: auto;
+    padding: 10px;
+    height: 450px;
+}
+iframe {
+    width: 100%;
+    height: 100%;
+}
 ul {
     text-align: left;
     list-style: none;
@@ -95,9 +104,28 @@ footer {
     padding: 10px;
     text-align: center; 
 }
-/* @media screen and (max-width: 900px) {
-    h1 {
-      font-size: 2rem;
-      padding: 10px;
-    }
-} */
+/* small view navigation */
+#menu {
+	font-size: 2.5rem;
+	border: 0;
+	background: none;
+	color: #000;
+	position: absolute;
+	top: 30px;
+	right: 10px;
+    margin: 15px;
+}
+#menu::before {
+	content: "☰";
+}
+#menu.open::before {
+	content: "🗷";
+}
+.open {
+    display: flex;
+    flex-direction: column;
+}
+.active::before {
+	content: "📖";  
+}
+
