--- a/styles/larger.css
+++ b/styles/larger.css
@@ -5,6 +5,7 @@
     font-size: 3rem;
   }
   nav {
+    display: flex;
     flex-direction: row;
   }
   main 
@@ -14,4 +15,8 @@
   h2 {
     grid-column: 1/3;
   }
+  #menu {
+		display: none; /* hide hamburger button */
+	}
+
 }
