--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -18,7 +18,15 @@ div {
 h1 {
   font-size: 2rem;
   padding: 10px;
+  color: #2242AE;
+
 }
+header {
+  background-color: #2242AE;
+  margin: auto;
+  padding: 0;
+}
+
 nav {
   display: none;
   background-color: #2242AE;
@@ -40,9 +48,8 @@ nav a:hover {
   color: #ffc107;
 }
 main {
-  width: 90%;
+  width: 100%;
   margin: auto;
-  padding: 10px;
   align-self: center;
   justify-self: center;
   text-align: center;
@@ -88,7 +95,7 @@ footer p {
   max-width: 100%;
 }
 img {
-  max-width: 90%;
+  max-width: 100%;
 }
 
 
