--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -63,7 +63,7 @@ h3 {
 footer {
   background-color: #2242AE;
   color: #FCFCFF;
-  width: 90%;
+  width: 100%;
   margin: auto;
   padding: 10px;
   text-align: center;
@@ -204,17 +204,11 @@ p {
 }
 
 
-
-
-
-
-
-
 /* The switch - the box around the slider */
 .switch {
   position: relative;
   display: inline-block;
-  width: 60px;
+  width: 65px;
   height: 34px;
 }
 
@@ -223,15 +217,21 @@ p {
   opacity: 0;
   width: 0;
   height: 0;
+  cursor: pointer;
 }
 
+.switch {
+  position: absolute;
+  right: 0;
+  top: 60px;
+}
 /* The slider */
 .slider {
   position: absolute;
   cursor: pointer;
   top: 0;
   left: 0;
-  right: 0;
+  right: 10px;
   bottom: 0;
   background-color: #ccc;
   -webkit-transition: .4s;
@@ -259,9 +259,9 @@ input:focus + .slider {
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+  -webkit-transform: translateX(20px);
+  -ms-transform: translateX(20px);
+  transform: translateX(20px);
 }
 
 /* Rounded sliders */
@@ -276,4 +276,7 @@ input:checked + .slider:before {
 .dark{
   background-color: #000;
   color:#fff;
+}
+#menu.dark-menu::before {
+  background-color: #f2f2f2;
 }
