--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -35,6 +35,13 @@
     .business-card {
       margin: 20px;
     }
-    
+    footer {
+      width: 90%;
+    }
+    .switch {
+      position: absolute;
+      right: 90px;
+      top: 35px;
+    }
   }
   
