--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 860px) {
     header,
     nav {
       max-width: 90%;
@@ -40,7 +40,7 @@
     }
     .switch {
       position: absolute;
-      right: 90px;
+      right: 5vw;
       top: 35px;
     }
   }
