--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -64,6 +64,21 @@
     .discover-main h1 {
       grid-column: 1/3;
     }
+    .list section p {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+        text-align: justify;
+
+    }
+    .list section p:hover{
+      white-space: normal;
+      overflow: visible;
+      text-overflow: unset;
+    }
+    .list section{
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    }
 
   }
   
