--- a/styles/base.css
+++ b/styles/base.css
@@ -163,3 +163,12 @@ footer {
 #links h4 {
     font-size: 1.2rem;
   }
+.weather {   
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}  
+.weather span {
+  margin: 2px;  
+}
