--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -282,6 +282,22 @@ input:checked + .slider:before {
 #menu.dark-menu::before {
   background-color: #f2f2f2;
 }
+
+.displayed {
+  display: none;
+} 
+#meetbanner {
+  text-align: center;
+  background-color: var(--accent-color2);
+  color: var(--main-txt-color);
+  font-size: 1.5rem;
+  margin: 0;
+  padding: 10px;
+}
+#meetbanner p {
+  margin: 0;
+  display: inline;
+}
 .hero {
 	margin: 10px auto;
 	position: relative;
@@ -291,11 +307,41 @@ input:checked + .slider:before {
   height:auto;
   border-radius: 10px;
 }
-.weatherDiv {
-  width: 300px;
-  height: 200px; 
-  border-style: solid; 
+#weather {
   margin: auto;
+  display: inline-block;
+}
+.weatherDiv {
+  margin: auto;
+}
+.weatherDiv h4 {
+   display: inline;
+}
+#current {   
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}  
+#forecast{
+  display:grid;
+  grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+  margin: 5px;
+}
+#forecast h4{
+background-color: var(--accent-color2);
+color: var(--main-txt-color);
+font-size: 2em;
+display: block;
+margin: 0;
+}
+#forecast p{
+   padding: 5px;
+   margin: 5px;
+  }
+.forecast-card{
+  border-style: solid;
+  margin: 2px;
 }
 /* .weather-join-card {
   display: flex;
