--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -264,11 +264,18 @@ input:focus + .slider {
   box-shadow: 0 0 1px #2196F3;
 }
 
-input:checked + .slider:before {
+/* input:checked + .slider:before {
+  -webkit-transform: translateX(20px);
+  -ms-transform: translateX(20px);
+  transform: translateX(20px);
+} */
+
+.slider.move:before {
   -webkit-transform: translateX(20px);
   -ms-transform: translateX(20px);
   transform: translateX(20px);
 }
+
 
 /* Rounded sliders */
 .slider.round {
