--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -3,8 +3,16 @@
   .businesses {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: flex-end;
   }
+  
   .business-card {
+    flex: 1;
     margin: 20px;
+    flex-direction: column;
+  justify-content: space-between;
+
+
   }
 }
