--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,92 +1,92 @@
 @media screen and (min-width: 860px) {
-    header,
-    nav {
-      max-width: 90%;
-      display: flex;
-      flex-direction: row;
-    }
-    #menu {
-      display: none; /* hide hamburger button */
-    }
-  
-    .businesses {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-    }
-    #cencosud {
-        grid-column:1/3;
-    }
-        
-
-    .business-card {
-      margin: auto;
-    }
-    .weather-join {
-      display: flex;
-      flex-direction: row;
-      margin-top: 15px;
-    }
-    .weather-join-card {
-      margin: auto;
-    }
-    main {
-      max-width: 90%;
-    }
-    .business-card {
-      margin: 20px;
-    }
-    footer {
-      width: 90%;
-    }
-    .switch {
-      position: absolute;
-      right: 5vw;
-      top: 35px;
-    }
-   /** Discover.html **/
-    .discover-main {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: auto auto;
-      padding: 10px;
-    }
-    .right-column {
-      display: flex;
-      flex-direction: column;
-      justify-items: center;
-    }
-    .history {
-      margin-top: 0;
-    }
-    .discover-img:hover .overlay {
-      opacity: 1;
-    } 
-    .discover-main h1 {
-      grid-column: 1/3;
-    }
-    .list section p {
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-        text-align: justify;
-
-    }
-    .list section p:hover{
-      white-space: normal;
-      overflow: visible;
-      text-overflow: unset;
-    }
-    .list section{
-      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    }
-    .menu {
-      align-items: center;
-    }
-    .menu h1 {
-      margin: 0;
-    }
-    #forecast{
-      display:flex;
-    }
+  header,
+  nav {
+    max-width: 90%;
+    display: flex;
+    flex-direction: row;
   }
-  
+  #menu {
+    display: none; /* hide hamburger button */
+  }
+
+  .businesses {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .business-card:nth-child(3) {
+    grid-column: 1 / 3;
+  }
+      
+
+  .business-card {
+    margin: auto;
+  }
+  .weather-join {
+    display: flex;
+    flex-direction: row;
+    margin-top: 15px;
+  }
+  .weather-join-card {
+    margin: auto;
+  }
+  main {
+    max-width: 90%;
+  }
+  .business-card {
+    margin: 20px;
+    min-height: 450px;
+  }
+  footer {
+    width: 90%;
+  }
+  .switch {
+    position: absolute;
+    right: 5vw;
+    top: 35px;
+  }
+ /** Discover.html **/
+  .discover-main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+    padding: 10px;
+  }
+  .right-column {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+  }
+  .history {
+    margin-top: 0;
+  }
+  .discover-img:hover .overlay {
+    opacity: 1;
+  } 
+  .discover-main h1 {
+    grid-column: 1/3;
+  }
+  .list section p {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+      text-align: justify;
+
+  }
+  .list section p:hover{
+    white-space: normal;
+    overflow: visible;
+    text-overflow: unset;
+  }
+  .list section{
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  }
+  .menu {
+    align-items: center;
+  }
+  .menu h1 {
+    margin: 0;
+  }
+  #forecast{
+    display:flex;
+  }
+}
