--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -60,6 +60,24 @@ main {
   justify-self: center;
   text-align: center;
 }
+
+
+.slideshow-container{
+  position: relative;
+  width: 100%;
+  padding-top: 105%; /* This value is based on the aspect ratio of the image (height / width * 100%) */
+  overflow: hidden;
+}
+
+.slideshow-container picture {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+
 h3 {
   background-color: #4952F7;
   color: #FCFCFF;
@@ -182,7 +200,8 @@ p {
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
+  display:none;
+  color: black;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
@@ -324,6 +343,7 @@ input:focus + .slider {
   height:auto;
   border-radius: 10px;
 }
+
 #weather {
   margin: auto;
   display: inline-block;
@@ -494,6 +514,7 @@ form label.top textarea {
 form label.sbs {
   display: block;
   padding: 0.5rem;
+  font-size:1.5em;
 }
 
 form input.submitBtn {
@@ -504,6 +525,7 @@ form input.submitBtn {
   padding: 0.75rem 1.5rem;
   margin: 1% 1% 2rem 1%;
   width: 98%;
+  font-size:2rem;
 }
 
 form label.top input:required {
@@ -513,30 +535,83 @@ form label.top input:required:valid {
   border-left: solid 4px green;
 }
 .memberlevel {
-  max-width: 60%;
-  min-width: 8rem;
+  /* max-width: 60%;
+  min-width: 8rem; */
   text-align: left;
-  display: none;
+  display: flex;
+  flex-direction:column;
   border: 1px solid var(--accent-color3);
   border-radius: 10px;
-  padding: 0.5rem 2%;
+  margin-bottom:10px;
   background-color: rgb(239, 243, 248);  
+  overflow: hidden;
 }
 .memberlevel ul{
   list-style-type: none;
   padding:5px;
+  font-size: 1.2rem;
+
 }
 
 .memberlevel p {
   padding: 5px;
   margin: 0;
-  font-size: 0.8rem;
+  font-size: 1.2rem;
 }
 
 input[type="radio"] {
-  transform: scale(1.5);
+  transform: scale(2);
 }
-#membershipGrid {
+#memberDescription{
+  margin:auto;
+  max-width:80vw;
+}
+.label-form-text{
+  padding-left: 10px;
+}
+
+
+
+/* #bronzeBenefits {
+  background-color: #FEE5AC;
+  border: 2px solid #D4AF37;
+  border-radius: 15px;
+  padding: 20px;
+  font-family: Arial, sans-serif;
+  color: #5C3E06;
+}
+
+#bronzeBenefits h3 {
+  text-align: center;
+  color: #D4AF37;
+  text-decoration: underline;
+}
+
+#bronzeBenefits p, #bronzeBenefits li {
+  line-height: 1.6;
+}
+
+#bronzeBenefits ul {
+  list-style-type: square;
+} */
+
+#npBenefits h3 {
+  background-color: lightblue;
+}
+.memberlevel h3 {
+  color:black;
+}
+#bronzeBenefits h3{
+  background-color: #cd853f;
+}
+#silverBenefits h3{
+  background-color: silver;
+}
+#goldBenefits h3{
+  background-color: gold;
+}
+
+/* #membershipGrid {
   display:grid;
   grid-template-columns:1fr 1fr;
   grid-template-rows:1fr 1fr 1fr 1fr 10px;
@@ -554,7 +629,9 @@ input[type="radio"] {
 #goldRadio:hover ~ #goldBenefits
  {
   display: block;
-} 
+}  */
+
+
 .dark{
   background-color: #000;
   color:#fff;
