--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -38,6 +38,7 @@
   }
   footer {
     width: 90%;
+    padding: 15px;
   }
   .switch {
     position: absolute;
@@ -89,4 +90,38 @@
   #forecast{
     display:flex;
   }
+  .joinus-body {
+    display:grid;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: auto auto;
+    grid-column-gap: 50px;
+  }
+  .joinus-body h1{
+    grid-column: 1/3;
+  }
+  #memberDescription{
+    margin:auto;
+    margin-top:0;
+  max-width:40vw;
+}
+
+.memberlevel ul{
+
+  font-size: 1rem;
+
+}
+
+.memberlevel p {
+  padding: 5px;
+  margin: 0;
+  font-size: 1rem;
+}
+
+.slideshow-container{
+  padding-top: 21.8%; /* This value is based on the aspect ratio of the image (height / width * 100%) */
+
+}
+
+
+
 }
