--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -59,6 +59,16 @@ nav a:visited {
 nav a:hover {
   color: #BB1B1B;
 }
+.hero a {
+  color: var(--accent-color6);
+  text-decoration: none;
+}
+.hero a:visited {
+  color: var(--accent-color6);
+}
+
+
+
 main {
   width: 100%;
   margin: auto;
@@ -67,7 +77,7 @@ main {
   text-align: center;
 }
 
-
+/* 
 .slideshow-container{
   position: relative;
   width: 100%;
@@ -81,7 +91,7 @@ main {
   left: 0;
   width: 100%;
   height: 100%;
-}
+} */
 
 
 h3 {
@@ -150,43 +160,60 @@ p {
 }
 
 /* Slideshow container */
-.slideshow-container {
-  max-width: 100%;
+
+* {
+  box-sizing: border-box;
+}
+
+/* Position the image container (needed to position the left and right arrows) */
+.container {
   position: relative;
-  margin: auto;
 }
 
 /* Hide the images by default */
-.mySlides {
+.mySlides, .text-overlay {
   display: none;
 }
-.mySlides img {
-  max-width: 100%;
+
+/* Add a pointer when hovering over the thumbnail images */
+.cursor {
+  cursor: pointer;
 }
+
 /* Next & previous buttons */
 .prev,
 .next {
   cursor: pointer;
   position: absolute;
-  top: 50%;
+  top: 40%;
   width: auto;
-  margin-top: -22px;
   padding: 16px;
+  margin-top: -50px;
   color: white;
   font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
+  font-size: 20px;
   border-radius: 0 3px 3px 0;
   user-select: none;
+  -webkit-user-select: none;
+}
+
+.text-overlay{
+  position: absolute;
+  bottom:31%;
+  background: rgb(0, 0, 0); /* Fallback color */
+  background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+  color: #f1f1f1; /* Grey text */
+  width: 100%; /* Full width */
+  padding: 20px; /* Some padding */
 }
 
 /* Position the "next button" to the right */
-.next {
-  right: 0;
+.prev {
+  left: 5%;
   border-radius: 3px 0 0 3px;
 }
-.prev {
-  left: 0;
+.next {
+  right: 5%;
   border-radius: 3px 0 0 3px;
 }
 /* On hover, add a black background color with a little bit see-through */
@@ -195,56 +222,48 @@ p {
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
 /* Number text (1/3 etc) */
 .numbertext {
-  display:none;
-  color: black;
+  color: #f2f2f2;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
   top: 0;
 }
 
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-.dot:hover {
-  background-color: #717171;
+/* Container for image text */
+.caption-container {
+  text-align: center;
+  background-color: #222;
+  padding: 2px 16px;
+  color: white;
 }
 
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
-@keyframes fade {
-  from {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1;
-  }
+/* Six columns side by side */
+.column {
+  float: left;
+  width: 16.66%;
 }
+
+/* Add a transparency effect for thumnbail images */
+.demo {
+  opacity: 0.6;
+}
+
+.active,
+.demo:hover {
+  opacity: 1;
+}
+
+
+
+
 
 
 /* The switch - the box around the slider */
