--- a/project/styles/larger.css
+++ b/project/styles/larger.css
@@ -1,5 +1,11 @@
 @media screen and (min-width: 1200px) {
+  main,
+  header,
+  nav,
+  footer {
+    max-width: 1600px;
 
+  }
   .businesses {
     display: flex;
     flex-direction: row;
