--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -486,7 +486,7 @@ margin: 0;
 
 
 
-.events-grid {
+.verhicles-grid {
   margin: auto;
   padding: 20px 0;
   max-width: 1000px;
@@ -495,7 +495,7 @@ margin: 0;
   grid-gap: 1em;
   justify-items: center;
 }
-.all-events {
+.vehicle {
   padding: 5px;
   margin: 10px; 
   box-shadow: 0 15px 20px #999; 
@@ -505,19 +505,18 @@ margin: 0;
   border-radius: 15px;
 }
 
-.events-msg{
- background-color: #1CD1C5;
+.terms{
+
  color: #1C1C1C;
- border-color: #1C1C1C;
- border-radius: 15px;
- border-style: solid;
+text-align: left;
  max-width: 90%;
  margin: auto;
 }
-.events-msg h2{
+
+.terms h2{
   color: #1C1C1C;
 }
-.all-events h3 {
+.vehicle h3 {
  color: #1CD1C5;
 }
 
@@ -539,7 +538,7 @@ transition: .5s ease;
 background-color: #1CD1C5;
 }
 
-.all-events:hover .overlay {
+.vehicle:hover .overlay {
 opacity: 1;
 }
 
