--- a/project/styles/medium.css
+++ b/project/styles/medium.css
@@ -165,4 +165,29 @@
 
 
 
+
+table{
+  width: 80%;
+  border-collapse: collapse;
+  margin: 0 auto; 
+}
+table th, table td {
+  border: 1px solid #dddddd; 
+  padding: 6px; 
+  text-align: left; 
+}
+table th {
+  background-color: mediumaquamarine; 
+}
+
+table tbody tr:nth-child(even) {
+  background-color: azure; 
+}
+
+table tbody tr:hover {
+  background-color: lightblue; 
+}
+
+
+
 }
