--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -77,9 +77,9 @@ main {
   text-align: center;
 }
 
-.hero-banner{
+/* .hero-banner{
   font-size: 1.5em;
-}
+} */
 
 h3 {
   background-color: var(--accent-color2);
@@ -276,79 +276,6 @@ padding:0;
 
 
 
-/* The switch - the box around the slider */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 65px;
-  height: 34px;
-}
-
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-  cursor: pointer;
-}
-
-.switch {
-  position: absolute;
-  right: 0;
-  top: 60px;
-}
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 10px;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-input:checked + .slider {
-  background-color: #2196F3;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
-}
-
-.slider.move:before {
-  -webkit-transform: translateX(20px);
-  -ms-transform: translateX(20px);
-  transform: translateX(20px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}
-
-#menu.dark-menu::before {
-  background-color: #f2f2f2;
-}
-
 .displayed {
   display: none;
 } 
@@ -541,50 +468,6 @@ table tbody tr:hover {
   background-color: lightblue; 
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* 
-
- .discover-img {
-  max-width: 400px;
-  padding: 5px;
-  margin: auto; 
-  margin-bottom: 10px;
-  text-align: center;
-  position: relative;
-  background-color: #4952F7;
-  border-radius: 15px;
-  overflow: hidden;
-}
-.discover-img h3 {
-  width: 100%;
-  margin: 0;
-} */
-
-/* .image {
-  display: block;
-  border-radius: 10px;
-}
- */
 .overlay {
   position: absolute;
   top: 0;
@@ -596,9 +479,6 @@ table tbody tr:hover {
   background-color: #2242AE;
 }
 
-/* .discover-img:hover .overlay {
-  opacity: 1;
-} */
 
 .text {
   color: #FCFCFF;
@@ -617,51 +497,6 @@ table tbody tr:hover {
 .pricing p, .text p{
   margin:0;
 }
-
-/* .history, .event-card, .training-card, .news{
-  border-style: solid;
-  border-radius: 15px;
-  border-color: #4952F7;
-  margin-bottom: 10px;
-}
- .discover-main h1 {
-  margin:0;
-  padding:30px;
-} 
-.discover-main h2 {
-  font-size: 2rem;
-  padding: 10px;
-  color: #2242AE;
-} 
-.left-column img {
-  width: 100%;
-  height: auto;
-}
-.history {
-  margin-top: 10px;
-} */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 /*----------------------------------- FORM -----------------------------------*/
@@ -727,204 +562,6 @@ form label.top input:required {
 form label.top input:required:valid {
   border-left: solid 4px green;
 }
-.memberlevel {
-  /* max-width: 60%;
-  min-width: 8rem; */
-  text-align: left;
-  display: flex;
-  flex-direction:column;
-  border: 1px solid var(--accent-color3);
-  border-radius: 10px;
-  margin-bottom:10px;
-  background-color: rgb(239, 243, 248);  
-  overflow: hidden;
-}
-.memberlevel ul{
-  list-style-type: none;
-  padding:5px;
-  font-size: 1.2rem;
-
-}
-
-.memberlevel p {
-  padding: 5px;
-  margin: 0;
-  font-size: 1.2rem;
-}
-
-input[type="radio"] {
-  transform: scale(2);
-}
-#memberDescription{
-  margin:auto;
-  max-width:80vw;
-}
 .label-form-text{
   padding-left: 10px;
-}
-
-
-
-/* #bronzeBenefits {
-  background-color: #FEE5AC;
-  border: 2px solid #D4AF37;
-  border-radius: 15px;
-  padding: 20px;
-  font-family: Arial, sans-serif;
-  color: #5C3E06;
-}
-
-#bronzeBenefits h3 {
-  text-align: center;
-  color: #D4AF37;
-  text-decoration: underline;
-}
-
-#bronzeBenefits p, #bronzeBenefits li {
-  line-height: 1.6;
-}
-
-#bronzeBenefits ul {
-  list-style-type: square;
-} */
-
-#npBenefits h3 {
-  background-color: lightblue;
-}
-.memberlevel h3 {
-  color:black;
-}
-#bronzeBenefits h3{
-  background-color: #cd853f;
-}
-#silverBenefits h3{
-  background-color: silver;
-}
-#goldBenefits h3{
-  background-color: gold;
-}
-
-/* #membershipGrid {
-  display:grid;
-  grid-template-columns:1fr 1fr;
-  grid-template-rows:1fr 1fr 1fr 1fr 10px;
-}
-#npRadio,#bronzeRadio,#silverRadio,#goldRadio{
-  grid-column:1;
-}
-#npBenefits, #bronzeBenefits, #silverBenefits, #goldBenefits{
-  grid-column:2;
-  grid-row:1/6;
-}
-#npRadio:hover ~ #npBenefits,
-#bronzeRadio:hover ~ #bronzeBenefits,
-#silverRadio:hover ~ #silverBenefits,
-#goldRadio:hover ~ #goldBenefits
- {
-  display: block;
-}  */
-
-
-.dark{
-  background-color: #000;
-  color:#fff;
-}
-.dark-body{
-  background-color: grey;
-  color:#fff;
-}
-
-.dark-list{
-  color:black !important;
-}
-.dark-list:visited{
-  color:black !important;
-}
-.dark-list-h3
-{
-  color: white !important;
-}
-/*----------------------------------- Directory -----------------------------------*/
-.member-card {
-  border-style: solid;
-  border-color: var(--accent-color2);
-}
-.member-card p {
-  margin: 0;
-  padding: 3px;
-}
-.member-card img {
-  margin: 10px;
-}
-.menu {
-  margin:0;
-  padding:15px;
-	text-align: center;
-}
-.menu button {
-	padding: 1rem;
-	font-weight: 700;
-}
-.dark-link {
-  text-decoration: none;
-  color: #fff;
-}
-.dark-link:visited {
-  text-decoration: none;
-  color: #fff;
-}
-.grid {
-	display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-  gap: 10px;
-  margin-bottom: 10px;
-}
-
-.grid section {
-	text-align: center;
-}
-
-.grid img {
-	border: 1px solid #fff;
-	box-shadow: 0 0 10px #333;
-}
-
-.list {
-	display: flex;
-	flex-direction: column;
-}
-
-.list section {
-	display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-	margin: 0;
-	padding: 0;
-  text-align: left;
-  align-items: center;
-}
-
-.list section > * {
-	margin: 0 1rem;
-}
-
-.list section img {
-	display: none; 
-}
-
-.member-card-H3{
-	font-size: 1rem;
-  margin: 0;
-  background-color: transparent;
-  color: #000;
-}
-/* .list section:nth-child(odd) h3 {
-	background-color: purple;
-  border-top: 0;
-  border-bottom:0;
-} */
-
-.list section:nth-child(even) {
-	background-color: lightcyan;
-  border-top: 0;
-  border-bottom:0;
 }
