--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -12,6 +12,7 @@
   --accent-color5: brown;
   --accent-color6: #0a0a0a;
 }
+
 h1,
 h2,
 h3,
@@ -20,22 +21,27 @@ h5,
 h6 {
   font-family: var(--heading-font);
 }
+
 p,
 a,
 div {
   font-family: var(--paragraph-font);
 }
+
 h1 {
   font-size: 2rem;
   padding: 10px;
   color: var(--accent-color5);
 }
+
 header {
   background-color: var(--accent-color1);
-  margin: auto; /**/
+  margin: auto;
+  /**/
   padding: 0;
 }
-.active{
+
+.active {
   text-decoration: underline;
 }
 
@@ -47,22 +53,27 @@ nav {
   padding: 10px;
   text-align: center;
 }
+
 nav a {
   color: var(--accent-color6);
   padding: 10px;
   text-decoration: none;
   font-size: 1.5rem;
 }
+
 nav a:visited {
   color: var(--accent-color6);
 }
+
 nav a:hover {
   color: #BB1B1B;
 }
+
 .hero a {
   color: var(--accent-color6);
   text-decoration: none;
 }
+
 .hero a:visited {
   color: var(--accent-color6);
 }
@@ -87,6 +98,7 @@ h3 {
   margin: 0;
   padding: 10px;
 }
+
 footer {
   background-color: var(--accent-color2);
   color: var(--main-txt-color2);
@@ -96,9 +108,11 @@ footer {
   text-align: center;
   font-size: x-large;
 }
+
 footer p {
   display: inline;
 }
+
 .social-media img {
   width: 40px;
 }
@@ -115,25 +129,30 @@ footer p {
   top: 5px;
   right: 10px;
   padding: 0;
-  margin:0;
+  margin: 0;
 }
+
 #menu::before {
   content: "☰";
 }
+
 #menu.open::before {
   content: "❌";
 }
+
 .open {
   display: flex;
   flex-direction: column;
 }
+
 img {
   max-width: 100%;
-  height:auto;
+  height: auto;
 }
+
 p {
-  padding:10px;
-  }
+  padding: 10px;
+}
 
 * {
   box-sizing: border-box;
@@ -148,11 +167,11 @@ p {
 /* Position the image container (needed to position the left and right arrows) */
 .container {
   position: relative;
-  margin:auto;
+  margin: auto;
 }
 
 /* Hide the images by default */
-.mySlides{
+.mySlides {
   display: none;
 }
 
@@ -177,29 +196,31 @@ p {
   user-select: none;
   -webkit-user-select: none;
 }
+
 .cozumel-container {
-  margin:auto;
-  margin-bottom:5px;
-  display:grid;
+  margin: auto;
+  margin-bottom: 5px;
+  display: grid;
   grid-template-columns: 1fr;
 }
-.cozumel-container picture{
-  position:relative;
-  margin:0;
+
+.cozumel-container picture {
+  position: relative;
+  margin: 0;
   border-radius: 5px;
   overflow: hidden;
-padding:0;
+  padding: 0;
 
 }
 
-.text-overlay{
+.text-overlay {
   position: absolute;
-  bottom:0;
-  background: rgb(0, 0, 0); 
-  background: rgba(0, 0, 0, 0.5); 
-  color: #f1f1f1; 
-  width:100%;
-  margin:0;
+  bottom: 0;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: 100%;
+  margin: 0;
   z-index: 1;
 }
 
@@ -208,10 +229,12 @@ padding:0;
   left: 5%;
   border-radius: 3px 0 0 3px;
 }
+
 .next {
   right: 5%;
   border-radius: 3px 0 0 3px;
 }
+
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover,
 .next:hover {
@@ -250,8 +273,8 @@ padding:0;
 /* Add a transparency effect for thumnbail images */
 .demo {
   opacity: 0.6;
-  width:100%;
-  height:auto;
+  width: 100%;
+  height: auto;
 }
 
 .active,
@@ -259,8 +282,8 @@ padding:0;
   opacity: 1;
 }
 
-.rentals{
-  display:flex;
+.rentals {
+  display: flex;
   flex-direction: column;
 }
 
@@ -278,7 +301,8 @@ padding:0;
 
 .displayed {
   display: none;
-} 
+}
+
 #meetbanner {
   text-align: center;
   background-color: var(--accent-color2);
@@ -287,17 +311,20 @@ padding:0;
   margin: 0;
   /*padding: 10px;*/
 }
+
 #meetbanner p {
   /*display: inline;*/
-  margin:0;
+  margin: 0;
 }
+
 .hero {
-	margin: 10px auto;
-	position: relative;
+  margin: 10px auto;
+  position: relative;
 }
+
 .hero img {
-	width: 100%;
-  height:auto;
+  width: 100%;
+  height: auto;
   border-radius: 10px;
 }
 
@@ -305,38 +332,46 @@ padding:0;
   margin: auto;
   display: inline-block;
 }
+
 .weatherDiv {
   margin: auto;
 }
+
 .weatherDiv h4 {
-   display: inline;
+  display: inline;
 }
-.current {   
-  display:flex;
+
+.current {
+  display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-}  
-#forecast{
-  display:grid;
+}
+
+#forecast {
+  display: grid;
   grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
   margin: 5px;
 }
-#forecast h4{
-background-color: var(--accent-color2);
-color: var(--main-txt-color2);
-font-size: 2em;
-display: block;
-margin: 0;
+
+#forecast h4 {
+  background-color: var(--accent-color2);
+  color: var(--main-txt-color2);
+  font-size: 2em;
+  display: block;
+  margin: 0;
 }
-#forecast p{
-   padding: 5px;
-   margin: 5px;
-  }
-.forecast-card{
+
+#forecast p {
+  padding: 5px;
+  margin: 5px;
+}
+
+.forecast-card {
   border-style: solid;
   margin: 2px;
 }
+
 .button-join {
   position: absolute;
   top: 60%;
@@ -348,7 +383,7 @@ margin: 0;
 
 .button-join span {
   padding: 10px;
-  font-size: 3rem; 
+  font-size: 3rem;
   background-color: maroon;
   color: white;
   border-radius: 15px;
@@ -358,9 +393,9 @@ margin: 0;
   z-index: 1;
 }
 
- .button-join span:hover {
+.button-join span:hover {
   background-color: darkgreen;
-} 
+}
 
 
 
@@ -373,71 +408,89 @@ main h2 {
   color: var(--accent-color2);
 }
 
-.verhicles-grid {
+.vehicles-grid {
   margin: auto;
   padding: 20px 0;
-  max-width: 1000px;
   display: flex;
   flex-direction: column;
 }
+
 .vehicle {
   padding: 5px;
-  margin: auto; 
-  box-shadow: 0 15px 20px #d1bbbb; 
+  margin: auto;
+  box-shadow: 0 15px 20px #d1bbbb;
   text-align: center;
   position: relative;
   background-color: #4d495e;
   border-radius: 15px;
-  overflow:hidden;
-  
+  overflow: hidden;
+
 }
 
-.terms{
-color: #1C1C1C;
-text-align: left;
- max-width: 90%;
- margin: auto;
+.terms {
+  max-width: 90%;
+  margin: auto;
+
+}
+.itemsDiv{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+.itemsDiv ul {
+  font-size: 1.25em;
+  list-style-type: none;
+  padding: 0;
+  padding: 5px;
+  border-style: solid;
+  border-radius: 7px;
+  min-height: 200px;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width:600px;
+
 }
 
-.terms h2{
-  color: #1C1C1C;
+.itemsDiv ul li {
+  padding: 2px;
+  margin: 0;
+  text-align: left;
 }
-.vehicle h3 {
- color: #1CD1C5;
-}
+
 
 .image {
-display: block;
-width: 100%;
-height: auto;
-border-radius: 10px;
+  display: block;
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
 }
 
 .overlay {
-position: absolute;
-top: 0;
-bottom: 0;
-left: 0;
-right: 0;
-opacity: 0;
-transition: .5s ease;
-background-color: yellow;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: yellow;
 }
 
 .vehicle:hover .overlay {
-opacity: 1;
+  opacity: 1;
 }
 
 .text {
-color: #1C1C1C;
-font-size: 20px;
-position: absolute;
-top: 50%;
-left: 50%;
--webkit-transform: translate(-50%, -50%);
--ms-transform: translate(-50%, -50%);
-transform: translate(-50%, -50%);
-text-align: center;
+  color: #1C1C1C;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 
@@ -446,27 +499,30 @@ text-align: center;
 
 
 
-table{
+table {
   width: 95%;
   border-collapse: collapse;
-  margin: 0 auto; 
+  margin: 0 auto;
 }
-table th, table td {
-  border: 1px solid #dddddd; 
-  padding: 2px; 
-  text-align: left; 
-  margin:2px;
+
+table th,
+table td {
+  border: 1px solid #dddddd;
+  padding: 2px;
+  text-align: left;
+  margin: 2px;
 }
+
 table th {
-  background-color: mediumaquamarine; 
+  background-color: mediumaquamarine;
 }
 
 table tbody tr:nth-child(even) {
-  background-color: azure; 
+  background-color: azure;
 }
 
 table tbody tr:hover {
-  background-color: lightblue; 
+  background-color: lightblue;
 }
 
 .overlay {
@@ -491,20 +547,22 @@ table tbody tr:hover {
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
-  width:100%
+  width: 100%
 }
 
 
-.pricing p, .text p{
-  margin:0;
+.pricing p,
+.text p {
+  margin: 0;
 }
 
 
 /*----------------------------------- FORM -----------------------------------*/
-.joinus-body h1{
-  margin:0;
-  padding:30px;
+.joinus-body h1 {
+  margin: 0;
+  padding: 30px;
 }
+
 form fieldset {
   border: 1px solid var(--accent-color3);
   border-radius: 10px;
@@ -537,7 +595,7 @@ form label.top textarea {
 form label.sbs {
   display: block;
   padding: 0.5rem;
-  font-size:1.25em;
+  font-size: 1.25em;
   text-align: left;
 }
 
@@ -550,19 +608,23 @@ form input.submitBtn {
   padding: 0.75rem 1.5rem;
   margin: 1% 1% 2rem 1%;
   width: 98%;
-  font-size:2rem;
+  font-size: 2rem;
 }
-.period{
-  color:#000;
+
+.period {
+  color: #000;
   font-size: 1em;
   text-align: left;
 }
+
 form label.top input:required {
   border-left: solid 4px red;
 }
+
 form label.top input:required:valid {
   border-left: solid 4px green;
 }
-.label-form-text{
+
+.label-form-text {
   padding-left: 10px;
 }
